--- a/app/src/main/res/layout/activity_repos_list.xml
+++ b/app/src/main/res/layout/activity_repos_list.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -14,4 +14,13 @@
             tools:listitem="@layout/item_repo_list"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="8"/>
-</LinearLayout>
+
+
+    <androidx.core.widget.ContentLoadingProgressBar
+            android:id="@+id/progressBarLoadingReposList"
+            android:layout_width="wrap_content"
+            style="?android:attr/progressBarStyle"
+            android:layout_gravity="center"
+            android:visibility="visible"
+            android:layout_height="wrap_content"/>
+</FrameLayout>
