--- a/app/src/main/res/layout/item_repo_list.xml
+++ b/app/src/main/res/layout/item_repo_list.xml
@@ -8,7 +8,10 @@
 
     <TextView
             android:id="@+id/textViewName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:minHeight="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
@@ -21,6 +24,7 @@
             android:id="@+id/textViewDescription"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:minHeight="20dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,6 +33,7 @@
             tools:text="Computation using data flow graphs for scalable machine learning"/>
 
     <TextView
+            android:id="@+id/textViewStarsCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
