--- a/app/src/main/res/layout/item_repo_list.xml
+++ b/app/src/main/res/layout/item_repo_list.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:textStyle="bold"
             android:textColor="@color/colorAccent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
